updated the hmtl's front page with the listing

--- a/index.html
+++ b/index.html
@@ -65,25 +65,23 @@ title: RailsBridge LA
 				<h1 class="focus-title"><span>MENTOR-ME LA</span></h1>
           <p class="info-focus">Find a Mentor at these Meetups</p>
           <p>For the next six months for instance, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
-          <p>MONDAYS:<br> 
-            <a href="/"> COLOFT HACKATHON</a>
-          </p>
           <p>TUESDAYS:<br> 
-            <a href="/"> PIVOTAL LABS PAIR EXCHANGE</a>
+            <a href="http://www.meetup.com/pivotal-la-weekly/"> PIVOTAL LABS PAIR EXCHANGE / EXTREME ROUNDTABLE</a>
           </p>
+          <p>WEDNESDAYS:<br> 
+              <a href="http://www.meetup.com/laruby/events/169640052/">> CAL TECH STUDY GROUP</a></br>
+              <a href="http://www.meetup.com/Hack-Night-at-Carbon-Five-LA/">> CARBON FIVE HACKATHON</a>
+          </p>
+          
           </div>
             
             <!--image-->
 			<div class="column_one_half last">
             	<div class="thumb feature left">
-                <p>WEDNESDAYS:<br> 
-                    <a href="/">> CAL TECH STUDY GROUP</a></br>
-                    <a href="/">> CARBON FIVE HACKATHON</a>
-                </p>
-                <p>THURSDAYS:<br>
-                  <a href="/">> WEST-SIDE STUDY GROUP</a><br>
-                  <a href="/">> EAST-SIDE STUDY GROUP</a><br>
-                  <a href="/">> SOUTH-BAY STUDY GROUP </a><br>
+               <p>THURSDAYS:<br>
+                  <a href="http://www.meetup.com/Westside-Rails-Study-Group/">> WEST-SIDE STUDY GROUP</a><br>
+                  <a href="http://www.meetup.com/LA-Eastside-Ruby-Rails-Study-Group/">> EAST-SIDE STUDY GROUP</a><br>
+                  <a href="http://www.meetup.com/South-Bay-Ruby-Developers/">> SOUTH-BAY STUDY GROUP </a><br>
                 </p>
 
                 <a class="media app-button play" href="http://www.youtube.com/embed/Neff9scaCCI"> Vimeo Demo <br/><span>Community Needs You</span></a>
@@ -100,7 +98,7 @@ title: RailsBridge LA
                 <div class="info">
                     <div class="info-inner">
                         <div class="column_one_half">
-                            <h5><span>Tutorials & Posts</span></h5>
+                            <h5><span>Featured Talk</span></h5>
                              <p class="info-focus">This could be the latest talk worth promoting.</p>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat fugiat nulla pariatur.</p>
                             <div id="home">
