--- a/index.html
+++ b/index.html
@@ -116,11 +116,11 @@ title: RailsBridge LA
                                 {% for post in site.posts %}
                                   <li>
                                     <span>{{ post.date | date_to_string }}</span> 
-                                    &raquo; <a href="{{ post.url }}">{{ post.title }}</a>
+                                    &raquo; <a href="{{site.baseurl}}{{ post.url }}">{{ post.title }}</a>
                                   </li>
                                   <li>
                                     <span>{{ post.date | date_to_string }}</span> 
-                                    &raquo; <a href="{{ post.url }}">{{ post.title }}</a>
+                                    &raquo; <a href="{{site.baseurl}}{{ post.url }}">{{ post.title }}</a>
                                   </li>
                                 {% endfor %}
                               </ul>                                                                     
