updated the responsive part of the first panel of the home page, and updated the twitter button, went ahead and updated the list of potential mentoring associations. And finally started grooming the way discus platform forum is going to work

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ title: RailsBridge LA
     <div class="content clearfix">   
       <!--info-->
       <div class="fluid-wrapper">
-        <iframe src="https://mapsengine.google.com/map/embed?mid=zC8TgvM22b_0.kbadmQQw93ZY" width="440" height="480"></iframe>
+        <iframe src="https://mapsengine.google.com/map/embed?mid=zC8TgvM22b_0.kbadmQQw93ZY" width="440" height="450"></iframe>
       </div>
 			
 		  <div class="column_one_half">
@@ -77,6 +77,10 @@ title: RailsBridge LA
             <a href="http://www.meetup.com/Westside-Rails-Study-Group/" target="_blank">> WEST-SIDE STUDY GROUP</a><br>
             <a href="http://www.meetup.com/LA-Eastside-Ruby-Rails-Study-Group/" target="_blank">> EAST-SIDE STUDY GROUP</a><br>
             <a href="http://www.meetup.com/South-Bay-Ruby-Developers/" target="_blank">> SOUTH-BAY STUDY GROUP </a><br>
+          </p>
+          <p>A GREAT ONLINE RESOURCES:<br>
+            <a href="http://www.railsmentors.org/" target="_blank">> RAILS MENTORS</a><br>
+            <a href="https://hackhands.com/#/howitworks" target="_blank">> HACK HANDS</a>
           </p>
                 
           <p>FEATURED MEETUP & HACKATHON<br>
