added all the jotform js files and created and thanks html file for redirects after the email submission. Also integrated the Mailchimp form and created a contact_form_2.html to play around and make the styles work.

--- a/contact.html
+++ b/contact.html
@@ -3,4 +3,4 @@ layout: contact
 title: RailsBridge LA
 permalink: /contact/ 
 ---
-{% include contact_form.html %}  
+{% include contact_form_2.html %}  
