--- a/archive.html
+++ b/archive.html
@@ -18,7 +18,7 @@ permalink: /blog/
             <div class="blog-post-content-inner">
               <ul class="posts">
                 <div>{{ post.date | date_to_html_string }}</div>
-                <h5><span><a href="{{post.url}}">{{post.title}}</a></h5>
+                <h5><span><a href="{{site.baseurl}}/{{post.url}}">{{post.title}}</a></h5>
                 <div class="categories">Filed under {{ post.categories | category_links }}</div> 
               </ul>
             </div><!-- end blog-post-content-inner -->
