created git tutorial, added images for git, added the install_git layout and the raphael library

--- a/tutorials.html
+++ b/tutorials.html
@@ -1,16 +1,15 @@
 ---
 layout: tutorials
 title: RailsBridge LA
-permalink: /tutorials/ 
+permalink: /tutorials/
 ---
 <div id="tutorial" class="page odd">
   <!--start content -->
   <div class="content clearfix">      
     <div class="cheat-sheets">   
-      <h1><span>Tutorials</span></h1>
+      <h1><span>Learn to love the Terminal</span></h1>
         
   		<div class="column_one_half tutorials">          
-  		  <h6><span>Learn to love the Terminal</span></h6>
         <div class="git-map git-four"></div>
       </div> <!-- //end span6  --> 
       
@@ -152,25 +151,25 @@ permalink: /tutorials/
           <span class="caret"></span>
         </button>
         <ul class="dropdown-menu">
-          <li><a href="/tutorials">Command Line Basics</a></li>
-          <li><a href="#">All About Git</a></li>
-          <li><a href="#">How to Install Git</a></li>
-          <li><a href="#">How to Create a Git Repository</a></li>
-          <li><a href="#">How to Clone Fetch and Pull</a></li>
-          <li><a href="#">Create and Merge Git Branches</a></li>
-          <li><a href="#">How to Rollback a Git Repository</a></li>
-          <li><a href="#">Deploying to Heroku</a></li>
-          <li><a href="#">RVM: Ruby Version Control</a></li>
-          <li><a href="#">Basic Ruby</a></li>
-          <li><a href="#">Scaffolding Basics</a></li>
-          <li><a href="#">Overview of Basic Testing</a></li>
+          <li><a href="{{ site.baseurl}}/tutorials">Command Line Basics</a></li>
+          <li><a href="{{ site.baseurl}}/tutorials/git">Using Git with Repos</a></li>
+          <li><a href="{{ site.baseurl}}/tutorials/install_git">How to Install Git</a></li>
+          <li><a href="{{ site.baseurl}}/tutorials/git_repo">How to Create a Git Repository</a></li>
+          <li><a href="{{ site.baseurl}}/tutorials/clone_pull">How to Clone Fetch and Pull</a></li>
+          <li><a href="{{ site.baseurl}}/tutorials/merge_branches">Create and Merge Git Branches</a></li>
+          <li><a href="{{ site.baseurl}}/tutorials/rollback">How to Rollback a Git Repository</a></li>
+          <li><a href="{{ site.baseurl}}/tutorials/deploy_to_heroku">Deploying to Heroku</a></li>
+          <li><a href="{{ site.baseurl}}/tutorials/rvm">RVM: Ruby Version Control</a></li>
+          <li><a href="{{ site.baseurl}}/tutorials/basic_ruby">Basic Ruby</a></li>
+          <li><a href="{{ site.baseurl}}/tutorials/scaffolding">Scaffolding Basics</a></li>
+          <li><a href="{{ site.baseurl}}/tutorials/basic_testing">Overview of Basic Testing</a></li>
         </ul>
       </div> <!-- //btn-group dropup  -->
 
         <!-- social networks -->
         <div class="canvas">
-          <div id="twitter" target="_blank"><a href="https://twitter.com/railsbridge LA"></a></div>
-          <div id="github" target="_blank"><a href="https://github.com/railsbridge"></a></div>
+          <a href="https://twitter.com/railsbridge la" id="twitter" target="_blank"></a> 
+          <a href="https://github.com/railsbridge" id="github" target="_blank"></a>
         </div>
 			</div> <!-- end of red background -->
     </div>    
