images for the tutorials

--- a/git.html
+++ b/git.html
@@ -142,8 +142,8 @@ permalink: /tutorials/git/
 
         <!-- social networks -->
         <div class="canvas">
-          <div id="twitter" target="_blank"><a href="https://twitter.com/railsbridge LA"></a></div>
-          <div id="github" target="_blank"><a href="https://github.com/railsbridge"></a></div>
+          <a href="https://twitter.com/railsbridgela" id="tweet" target="_blank"></a>
+          <a href="https://github.com/railsbridge" id="github" target="_blank"></a>
         </div>
 			</div> <!-- end of red background -->
     </div>    
