--- a/install_git.html
+++ b/install_git.html
@@ -229,9 +229,9 @@ permalink: /tutorials/install_git/
           <li><a href="{{ site.baseurl}}/tutorials">Command Line Basics</a></li>
           <li><a href="{{ site.baseurl}}/tutorials/git">Using Git with Repos</a></li>
           <li><a href="{{ site.baseurl}}/tutorials/install_git">How to Install Git</a></li>
-          <li><a href="{{ site.baseurl}}/tutorials/git_repo">How to Create a Git Repository</a></li>
+          <li><a href="{{ site.baseurl}}/tutorials/git_repo">How to Create a Git Repository</a></li>  
           <li><a href="{{ site.baseurl}}/tutorials/clone_pull">How to Clone Fetch and Pull</a></li>
-          <li><a href="{{ site.baseurl}}/tutorials/merge_branches">Create and Merge Git Branches</a></li>
+          <li><a href="{{ site.baseurl}}/tutorials/merge_branches">Create and Merge Git Branches</a></li>   
           <li><a href="{{ site.baseurl}}/tutorials/rollback">How to Rollback a Git Repository</a></li>
           <li><a href="{{ site.baseurl}}/tutorials/deploy_to_heroku">Deploying to Heroku</a></li>
           <li><a href="{{ site.baseurl}}/tutorials/rvm">RVM: Ruby Version Control</a></li>
@@ -243,8 +243,8 @@ permalink: /tutorials/install_git/
 
         <!-- social networks -->
         <div class="canvas">
-          <div id="twitter" target="_blank"><a href="https://twitter.com/railsbridge LA"></a></div>
-          <div id="github" target="_blank"><a href="https://github.com/railsbridge"></a></div>
+          <a href="https://twitter.com/railsbridgela" id="tweet" target="_blank"></a>
+          <a href="https://github.com/railsbridge" id="github" target="_blank"></a>
         </div>
 			</div> <!-- end of red background -->
     </div>    
