--- a/tutorials.html
+++ b/tutorials.html
@@ -104,7 +104,7 @@ permalink: /tutorials/
               get back to the former context.
             </p>
             <p class="tuts">
-              <span class="strong em">ctrl + d</span> 'Control D' tells the terminal to register a EOF, an 'End of File' on standard input, which the terminal 
+              <span class="strong em">Ctrl-D</span> 'Control D' tells the terminal to register an EOF: 'End of File' on standard input, which the terminal 
               interprets as a desire to exit.
             </p>
             <p class="tuts">
@@ -127,6 +127,9 @@ permalink: /tutorials/
             <p class="tuts">
               <span class="strong em">rails s</span> Shorthand for 'Rails Server launches a local server, you then open
               a browser window and type: localhost:3000 will render a local version of your work in the browser.
+            </p>
+            <p class="tuts">
+              Checkout this commandline cheatsheet on <a href="http://www.cheatography.com/davechild/cheat-sheets/linux-command-line/">Cheatography</a>.
             </p>
 					</dd>
           
@@ -167,8 +170,8 @@ permalink: /tutorials/
       </div> <!-- //btn-group dropup  -->
 
         <!-- social networks -->
-        <div class="canvas">
-          <a href="https://twitter.com/railsbridge la" id="twitter" target="_blank"></a> 
+        <div class="canvas">          
+          <a href="https://twitter.com/railsbridgela" id="tweet" target="_blank"></a>
           <a href="https://github.com/railsbridge" id="github" target="_blank"></a>
         </div>
 			</div> <!-- end of red background -->
