updated the contact_form2, header.html, header_posts.html, archives.html, the style.css and index.html... all to optimze the site for mobile. That conflict on contact still remains

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ title: RailsBridge LA
           We provide free workshops on Ruby, Ruby on Rails, Javascript 
           and other key frameworks in the Los Angeles area. <br>
           <br>
-          All levels of experience welcome! From having never coded to years of experience!
+          All levels of experience welcome!
         </p>
         <div class="app-price"><a class="navigateTo active" href="#features-1">JOIN US!<w/a></div>
         <div id="app-button-container">
