updated the embedded video to load SpeakerDeck

--- a/index.html
+++ b/index.html
@@ -241,10 +241,10 @@ title: RailsBridge LA
           </p> 
           <a href="#">Link to a Post Here</a>
         </div>
-        <a class="media app-button sync" href="http://player.vimeo.com/video/41178550?title=0&amp;portrait=0&amp;badge=0&amp;color=fc7022">
+        <!-- <a class="media app-button sync" href="http://player.vimeo.com/video/41178550?title=0&amp;portrait=0&amp;badge=0&amp;color=fc7022"> How to include it from VIMEO--> 
+        <a class="media app-button sync" href="http://speakerdeck.com/embed/0f419160d25c0130a0441212964f4566">
           Data Modeling with Active Record<br/>
           <span>Hannah Howard shares her knowledge!</span></a> <!-- http://oembed.com/  -->
-          <!-- <script async class="speakerdeck-embed" data-id="0f419160d25c0130a0441212964f4566" data-ratio="1.2994923857868" src="//speakerdeck.com/assets/embed.js"></script> -->
       </div>
     </div>
     <!--end featured content-->   
