added all the tutorials, and started the styling of all the pages

--- a/clone_pull.html
+++ b/clone_pull.html
@@ -21,7 +21,7 @@ permalink: /tutorials/clone_pull/
   				<dt><a href="#"><span>+</span> Git Clone</a></dt>
   				<dd style="">
             <p class="tuts">
-              In the command line 'git clone'</span> will copy a repo into a newly created directory,
+              <span class="strong em">Typing 'git clone' in the command line</span> will copy a repo into a newly created directory,
               and creates remote-tracking branches for each branch in the cloned repository.
             </p>
             <p class="tuts">
@@ -49,7 +49,7 @@ permalink: /tutorials/clone_pull/
             </p>
             <p class="tuts">
               Fetch does not make any changes to local branches, so you will need
-              to merge a remote branch with a paired local branch to incorporate new fetch changes.    
+              to merge a remote branch with a paired local branch to incorporate newly 'fetched' changes.    
             </p>
             <div class="coding">
               <h6 class="steps">
@@ -88,7 +88,7 @@ permalink: /tutorials/clone_pull/
           <li><a href="{{ site.baseurl}}/tutorials/git">Using Git with Repos</a></li>
           <li><a href="{{ site.baseurl}}/tutorials/install_git">How to Install Git</a></li>
           <li><a href="{{ site.baseurl}}/tutorials/git_repo">How to Create a Git Repository</a></li>  
-          <li><a href="{{ site.baseurl}}/tutorials/clone_pull">How to Clone Fetch and Pull</a></li>
+          <li><a class="active" href="{{ site.baseurl}}/tutorials/clone_pull">How to Clone Fetch and Pull</a></li>
           <li><a href="{{ site.baseurl}}/tutorials/merge_branches">Create and Merge Git Branches</a></li>   
           <li><a href="{{ site.baseurl}}/tutorials/rollback">How to Rollback a Git Repository</a></li>
           <li><a href="{{ site.baseurl}}/tutorials/deploy_to_heroku">Deploying to Heroku</a></li>
