--- a/git.html
+++ b/git.html
@@ -126,7 +126,7 @@ permalink: /tutorials/git/
         </button>
         <ul class="dropdown-menu">
           <li><a href="{{ site.baseurl}}/tutorials">Command Line Basics</a></li>
-          <li><a href="{{ site.baseurl}}/tutorials/git">Using Git with Repos</a></li>
+          <li><a class="active" href="{{ site.baseurl}}/tutorials/git">Using Git with Repos</a></li>
           <li><a href="{{ site.baseurl}}/tutorials/install_git">How to Install Git</a></li>
           <li><a href="{{ site.baseurl}}/tutorials/git_repo">How to Create a Git Repository</a></li>
           <li><a href="{{ site.baseurl}}/tutorials/clone_pull">How to Clone Fetch and Pull</a></li>
