--- a/git_repo.html
+++ b/git_repo.html
@@ -235,7 +235,7 @@ permalink: /tutorials/git_repo/
           <li><a href="{{ site.baseurl}}/tutorials">Command Line Basics</a></li>
           <li><a href="{{ site.baseurl}}/tutorials/git">Using Git with Repos</a></li>
           <li><a href="{{ site.baseurl}}/tutorials/install_git">How to Install Git</a></li>
-          <li><a href="{{ site.baseurl}}/tutorials/git_repo">How to Create a Git Repository</a></li>  
+          <li><a class="active" href="{{ site.baseurl}}/tutorials/git_repo">How to Create a Git Repository</a></li>  
           <li><a href="{{ site.baseurl}}/tutorials/clone_pull">How to Clone Fetch and Pull</a></li>
           <li><a href="{{ site.baseurl}}/tutorials/merge_branches">Create and Merge Git Branches</a></li>   
           <li><a href="{{ site.baseurl}}/tutorials/rollback">How to Rollback a Git Repository</a></li>
