updated the partial that handles all the button dropups, changed Tuturial to point to comandline_line_basics, and groomed the copy in Commandline one more time. That page is complete.

--- a/basic_ruby.html
+++ b/basic_ruby.html
@@ -3,7 +3,7 @@ layout: tutorials
 title: RailsBridge LA
 permalink: /tutorials/basic_ruby/
 ---
-<div id="tutorial" class="page odd">                                                        a
+<div id="tutorial" class="page odd">                                                        
   <!--start content -->
   <div class="content clearfix">      
     <div class="cheat-sheets">   
