updated the css and edited the content and finished the tut deploy_to_heroku.html

--- a/git_repo.html
+++ b/git_repo.html
@@ -35,7 +35,7 @@ permalink: /tutorials/git_repo/
             </p>  
             <div class="coding">
               <h6 class="steps">
-                $ git add .<br>
+                <div class="accent">$</div> git add .<br>
                 $ git commit -m 'your first commit is typed here, this is sample copy'
               </h6>
             </div>
