--- a/install_git.html
+++ b/install_git.html
@@ -41,9 +41,9 @@ permalink: /tutorials/install_git/
               When you have all the necessary dependencies, you can go ahead and grab the latest snapshot from the Git web site:
             </p>  
             <div class="coding">
-             <h6 class="steps">
-               http://git-scm.com/download  
-             </h6>
+              <h6 class="steps">
+                http://git-scm.com/download  
+              </h6>
             </div>
             
             <p class="tuts">
@@ -118,16 +118,14 @@ permalink: /tutorials/install_git/
               <span class="strong em">Installing Git</span> on Windows is very easy. The msysGit project has one of the easier installation procedures. 
               Simply download the installer exe file from the Google Code page, and run it:
             </p>
-            <p class="tuts">
-              <div class="coding">
-                <h6 class="steps">
-                  http://msysgit.github.com/<br>
-                </h6>
-              </div>
-            </p>
+            <div class="coding">
+              <h6 class="steps">
+                http://msysgit.github.com/<br>
+              </h6>
+            </div>
             <p class="tuts">
               After it’s installed, you have both a command-line version (including an SSH client that will come in handy later) 
-              and the standard GUI. <br><br>
+              and the standard GUI. <br>
               <span class="strong em">Note on Windows usage:</span> you should use Git with the provided msysGit shell (Unix style), it allows      
               to use the complex lines of command given in this book. If you need, for some reason, to use the native Windows shell /  
               command line console, you have to use double quotes instead of simple quotes (for parameters with spaces in them) and you  
