--- a/install_git.html
+++ b/install_git.html
@@ -31,9 +31,9 @@ permalink: /tutorials/install_git/
             </p>
             <div class="coding">
               <h6 class="steps">
-                $ yum install curl-devel expat-devel gettext-devel \ <br>
+                <span class="accent">$</span>&nbsp &nbsp yum install curl-devel expat-devel gettext-devel \ <br>
                   openssl-devel zlib-devel<br>
-                $ apt-get install libcurl4-gnutls-dev libexpat1-dev gettext \<br>
+                <span class="accent">$</span>&nbsp &nbsp apt-get install libcurl4-gnutls-dev libexpat1-dev gettext \<br>
                   libz-dev libssl-dev
               </h6>
             </div>
@@ -51,10 +51,10 @@ permalink: /tutorials/install_git/
             </p>
             <div class="coding">
               <h6 class="steps">
-                $ tar -zxf git-1.7.2.2.tar.gz<br>
-                $ cd git-1.7.2.2<br> 
-                $ make prefix=/usr/local all<br> 
-                $ sudo make prefix=/usr/local install
+                <span class="accent">$</span>&nbsp &nbsp tar -zxf git-1.7.2.2.tar.gz<br>
+                <span class="accent">$</span>&nbsp &nbsp cd git-1.7.2.2<br> 
+                <span class="accent">$</span>&nbsp &nbsp make prefix=/usr/local all<br> 
+                <span class="accent">$</span>&nbsp &nbsp sudo make prefix=/usr/local install
               </h6>
             </div>
             <p class="tuts">
@@ -62,7 +62,7 @@ permalink: /tutorials/install_git/
             </p>
             <div class="coding">
               <h6 class="steps">
-                $ git clone git://git.kernel.org/pub/scm/git/git.git
+                <span class="accent">$</span>&nbsp &nbsp git clone git://git.kernel.org/pub/scm/git/git.git
               </h6>
             </div>
           </dd>
@@ -76,7 +76,7 @@ permalink: /tutorials/install_git/
             </p>
             <div class="coding">
               <h6 class="steps">
-                $ yum install git-core<br>
+                <span class="accent">$</span>&nbsp &nbsp yum install git-core<br>
               </h6>
             </div>
             <p class="tuts">
@@ -84,7 +84,7 @@ permalink: /tutorials/install_git/
             </p>
             <div class="coding">
               <h6 class="steps">
-                $ apt-get install git<br>
+                <span class="accent">$</span>&nbsp &nbsp apt-get install git<br>
               </h6>
             </div>
   				</dd>
@@ -107,7 +107,7 @@ permalink: /tutorials/install_git/
             </p>
             <div class="coding">
               <h6 class="steps">
-                $ sudo port install git-core +svn +doc +bash_completion +gitweb<br>
+                <span class="accent">$</span>&nbsp &nbsp sudo port install git-core +svn +doc +bash_completion +gitweb<br>
               </h6>
             </div>  
 					</dd>
@@ -146,7 +146,7 @@ permalink: /tutorials/install_git/
             </p>
             <div class="coding">
               <h6 class="steps">
-                ruby -e "$(curl -fsSL https://raw.github.com/mxcl/homebrew/go)"<br>
+                <span class="accent">$</span>&nbsp &nbsp ruby -e "$(curl -fsSL https://raw.github.com/mxcl/homebrew/go)"<br>
               </h6>
             </div> 
             <p class="tuts">  
@@ -156,7 +156,7 @@ permalink: /tutorials/install_git/
             </p>
             <div class="coding">
               <h6 class="steps">
-                $ brew doctor<br>
+                <span class="accent">$</span>&nbsp &nbsp brew doctor<br>
               </h6>
             <p class="tuts">  
               If you get 'Your system is raring to brew', you can move on to the next step.
@@ -173,7 +173,7 @@ permalink: /tutorials/install_git/
             </p>
             <div class="coding">
               <h6 class="steps">
-                $ sudo mkdir /usr/local/Cellar<br>
+                <span class="accent">$</span>&nbsp &nbsp sudo mkdir /usr/local/Cellar<br>
               </h6>
             </div>
             
@@ -187,7 +187,7 @@ permalink: /tutorials/install_git/
             </p>
             <div class="coding">
               <h6 class="steps">
-                $ sudo chown -R `whoami` /usr/local<br>
+                <span class="accent">$</span>&nbsp &nbsp sudo chown -R `whoami` /usr/local<br>
               </h6>
             </div> 
             <p class="tuts">
@@ -197,7 +197,7 @@ permalink: /tutorials/install_git/
             </p>
             <div class="coding">
               <h6 class="steps">
-                $ man chown<br>
+                <span class="accent">$</span>&nbsp &nbsp man chown<br>
               </h6>
             </div>
             <p class="tuts">
@@ -209,7 +209,7 @@ permalink: /tutorials/install_git/
             </p>
             <div class="coding">
               <h6 class="steps">
-                $ sudo xcode-select -switch /Applications/Xcode.app/Contents/Developer<br>
+                <span class="accent">$</span>&nbsp &nbsp sudo xcode-select -switch /Applications/Xcode.app/Contents/Developer<br>
               </h6>
             </div>
             <p class="tuts">
